Fix - optgroup styling in dark mode

--- a/packages/styles/_sass/pm-styles/_pm-forms.scss
+++ b/packages/styles/_sass/pm-styles/_pm-forms.scss
@@ -96,7 +96,12 @@ select.pm-field {
   &::-ms-expand {
     display: none;
   }
+  > optgroup {
+	background-color: var(--bgcolor-highlight, $pm-global-light);
+  }
 }
+
+
 
 /* firefox bug */
 textarea[required].pm-field.field-pristine:invalid {
